{
  "version": 4,
  "terraform_version": "1.5.5",
  "serial": 232,
  "lineage": "e5b11987-05f6-9bcd-69a0-051fd49bdda0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Server-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0453898e98046c639",
            "arn": "arn:aws:ec2:us-east-1:975266691648:instance/i-00e8fce9d074b5149",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00e8fce9d074b5149",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "alb-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01eb828f66bb9245d",
            "private_dns": "ip-20-15-10-5.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "20.15.10.5",
            "public_dns": "ec2-3-236-93-217.compute-1.amazonaws.com",
            "public_ip": "3.236.93.217",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-041afde476114b4df",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-042b7d226d07d5e1a",
            "tags": {
              "Name": "Pub-Server-1"
            },
            "tags_all": {
              "Name": "Pub-Server-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04e7cd0e7db0da7be"
            ]
          },
          "dependencies": [
            "aws_key_pair.albkey",
            "aws_security_group.alb-sg",
            "aws_subnet.alb-sub1",
            "aws_vpc.vpc-alb",
            "data.aws_ami.demo_ser"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Server-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0453898e98046c639",
            "arn": "arn:aws:ec2:us-east-1:975266691648:instance/i-07a4ff12613a9b50c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07a4ff12613a9b50c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "alb-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08c3eb0982539403f",
            "private_dns": "ip-20-15-11-93.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "20.15.11.93",
            "public_dns": "ec2-54-208-9-166.compute-1.amazonaws.com",
            "public_ip": "54.208.9.166",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0030e872d8006f8b6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-027ffa4ee6c2f3a26",
            "tags": {
              "Name": "Pub-Server-2"
            },
            "tags_all": {
              "Name": "Pub-Server-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04e7cd0e7db0da7be"
            ]
          },
          "dependencies": [
            "aws_key_pair.albkey",
            "aws_security_group.alb-sg",
            "aws_subnet.alb-sub2",
            "aws_vpc.vpc-alb",
            "data.aws_ami.demo_ser"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Server-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0453898e98046c639",
            "arn": "arn:aws:ec2:us-east-1:975266691648:instance/i-090a03b73e65e74aa",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-090a03b73e65e74aa",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "alb-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09944bf7f01eb3067",
            "private_dns": "ip-20-15-12-36.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "20.15.12.36",
            "public_dns": "ec2-35-172-185-111.compute-1.amazonaws.com",
            "public_ip": "35.172.185.111",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08935dcb64adefe94",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06296508062d746de",
            "tags": {
              "Name": "Pub-Server-3"
            },
            "tags_all": {
              "Name": "Pub-Server-3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04e7cd0e7db0da7be"
            ]
          },
          "dependencies": [
            "aws_key_pair.albkey",
            "aws_security_group.alb-sg",
            "aws_subnet.alb-sub3",
            "aws_vpc.vpc-alb",
            "data.aws_ami.demo_ser"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975266691648:internet-gateway/igw-073226cd1c49cf0e9",
            "id": "igw-073226cd1c49cf0e9",
            "owner_id": "975266691648",
            "tags": {
              "Name": "ALB-VPC"
            },
            "tags_all": {
              "Name": "ALB-VPC"
            },
            "vpc_id": "vpc-0926c91ad3c68425b"
          },
          "dependencies": [
            "aws_vpc.vpc-alb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "scene-2-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:975266691648:loadbalancer/app/Scene-2-lb/5e2f0f4912b2f024",
            "arn_suffix": "app/Scene-2-lb/5e2f0f4912b2f024",
            "desync_mitigation_mode": "defensive",
            "dns_name": "Scene-2-lb-1606494669.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:975266691648:loadbalancer/app/Scene-2-lb/5e2f0f4912b2f024",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "Scene-2-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-04e7cd0e7db0da7be"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-027ffa4ee6c2f3a26"
              },
              {
                "subnet_id": "subnet-042b7d226d07d5e1a"
              },
              {
                "subnet_id": "subnet-06296508062d746de"
              }
            ],
            "subnets": [
              "subnet-027ffa4ee6c2f3a26",
              "subnet-042b7d226d07d5e1a",
              "subnet-06296508062d746de"
            ],
            "vpc_id": "vpc-0926c91ad3c68425b",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb-sg",
            "aws_subnet.alb-sub1",
            "aws_subnet.alb-sub2",
            "aws_subnet.alb-sub3",
            "aws_vpc.vpc-alb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listner_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:975266691648:listener/app/Scene-2-lb/5e2f0f4912b2f024/44688eee8da2d221",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:975266691648:targetgroup/alb-tg-1/db001eaeb937a5f6",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:975266691648:listener/app/Scene-2-lb/5e2f0f4912b2f024/44688eee8da2d221",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:975266691648:loadbalancer/app/Scene-2-lb/5e2f0f4912b2f024",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.scene-2-lb",
            "aws_lb_target_group.alb-tg-1",
            "aws_security_group.alb-sg",
            "aws_subnet.alb-sub1",
            "aws_subnet.alb-sub2",
            "aws_subnet.alb-sub3",
            "aws_vpc.vpc-alb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "ins1_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:975266691648:targetgroup/alb-tg-1/db001eaeb937a5f6",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:975266691648:listener-rule/app/Scene-2-lb/5e2f0f4912b2f024/44688eee8da2d221/7455da8c6bd356a6",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/usr/share/nginx/html/gmail/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:975266691648:listener-rule/app/Scene-2-lb/5e2f0f4912b2f024/44688eee8da2d221/7455da8c6bd356a6",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:975266691648:listener/app/Scene-2-lb/5e2f0f4912b2f024/44688eee8da2d221",
            "priority": 100,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.scene-2-lb",
            "aws_lb_listener.listner_1",
            "aws_lb_target_group.alb-tg-1",
            "aws_security_group.alb-sg",
            "aws_subnet.alb-sub1",
            "aws_subnet.alb-sub2",
            "aws_subnet.alb-sub3",
            "aws_vpc.vpc-alb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "ins2_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:975266691648:targetgroup/alb-tg-2/16c588b175374441",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:975266691648:listener-rule/app/Scene-2-lb/5e2f0f4912b2f024/44688eee8da2d221/27fba2a23cebb30a",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/usr/share/nginx/html/drive/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:975266691648:listener-rule/app/Scene-2-lb/5e2f0f4912b2f024/44688eee8da2d221/27fba2a23cebb30a",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:975266691648:listener/app/Scene-2-lb/5e2f0f4912b2f024/44688eee8da2d221",
            "priority": 101,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.scene-2-lb",
            "aws_lb_listener.listner_1",
            "aws_lb_target_group.alb-tg-1",
            "aws_lb_target_group.alb-tg-2",
            "aws_security_group.alb-sg",
            "aws_subnet.alb-sub1",
            "aws_subnet.alb-sub2",
            "aws_subnet.alb-sub3",
            "aws_vpc.vpc-alb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "ins3_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:975266691648:targetgroup/alb-tg-3/c10e235a4eec7bbe",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:975266691648:listener-rule/app/Scene-2-lb/5e2f0f4912b2f024/44688eee8da2d221/ad5c1b22e9fd637d",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/usr/share/nginx/html/photos/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:975266691648:listener-rule/app/Scene-2-lb/5e2f0f4912b2f024/44688eee8da2d221/ad5c1b22e9fd637d",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:975266691648:listener/app/Scene-2-lb/5e2f0f4912b2f024/44688eee8da2d221",
            "priority": 102,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.scene-2-lb",
            "aws_lb_listener.listner_1",
            "aws_lb_target_group.alb-tg-1",
            "aws_lb_target_group.alb-tg-3",
            "aws_security_group.alb-sg",
            "aws_subnet.alb-sub1",
            "aws_subnet.alb-sub2",
            "aws_subnet.alb-sub3",
            "aws_vpc.vpc-alb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb-tg-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:975266691648:targetgroup/alb-tg-1/db001eaeb937a5f6",
            "arn_suffix": "targetgroup/alb-tg-1/db001eaeb937a5f6",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 10,
                "matcher": "200",
                "path": "/usr/share/nginx/html/gmail/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:975266691648:targetgroup/alb-tg-1/db001eaeb937a5f6",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "alb-tg-1",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0926c91ad3c68425b"
          },
          "dependencies": [
            "aws_vpc.vpc-alb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb-tg-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:975266691648:targetgroup/alb-tg-2/16c588b175374441",
            "arn_suffix": "targetgroup/alb-tg-2/16c588b175374441",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 10,
                "matcher": "200",
                "path": "/usr/share/nginx/html/drive/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:975266691648:targetgroup/alb-tg-2/16c588b175374441",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "alb-tg-2",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0926c91ad3c68425b"
          },
          "dependencies": [
            "aws_vpc.vpc-alb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb-tg-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:975266691648:targetgroup/alb-tg-3/c10e235a4eec7bbe",
            "arn_suffix": "targetgroup/alb-tg-3/c10e235a4eec7bbe",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 10,
                "matcher": "200",
                "path": "/usr/share/nginx/html/photos/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:975266691648:targetgroup/alb-tg-3/c10e235a4eec7bbe",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "alb-tg-3",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0926c91ad3c68425b"
          },
          "dependencies": [
            "aws_vpc.vpc-alb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "att-tg-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:975266691648:targetgroup/alb-tg-1/db001eaeb937a5f6-20230820061521649900000007",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:975266691648:targetgroup/alb-tg-1/db001eaeb937a5f6",
            "target_id": "i-00e8fce9d074b5149"
          },
          "dependencies": [
            "aws_instance.Server-1",
            "aws_key_pair.albkey",
            "aws_lb_target_group.alb-tg-1",
            "aws_security_group.alb-sg",
            "aws_subnet.alb-sub1",
            "aws_vpc.vpc-alb",
            "data.aws_ami.demo_ser"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "att-tg-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:975266691648:targetgroup/alb-tg-2/16c588b175374441-20230820061521649900000008",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:975266691648:targetgroup/alb-tg-2/16c588b175374441",
            "target_id": "i-07a4ff12613a9b50c"
          },
          "dependencies": [
            "aws_instance.Server-2",
            "aws_key_pair.albkey",
            "aws_lb_target_group.alb-tg-2",
            "aws_security_group.alb-sg",
            "aws_subnet.alb-sub2",
            "aws_vpc.vpc-alb",
            "data.aws_ami.demo_ser"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "att-tg-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:975266691648:targetgroup/alb-tg-3/c10e235a4eec7bbe-20230820061522741900000009",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:975266691648:targetgroup/alb-tg-3/c10e235a4eec7bbe",
            "target_id": "i-090a03b73e65e74aa"
          },
          "dependencies": [
            "aws_instance.Server-3",
            "aws_key_pair.albkey",
            "aws_lb_target_group.alb-tg-3",
            "aws_security_group.alb-sg",
            "aws_subnet.alb-sub3",
            "aws_vpc.vpc-alb",
            "data.aws_ami.demo_ser"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:975266691648:targetgroup/alb-tg-3/c10e235a4eec7bbe-2023082006152274190000000a",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:975266691648:targetgroup/alb-tg-3/c10e235a4eec7bbe",
            "target_id": "i-090a03b73e65e74aa"
          },
          "dependencies": [
            "aws_instance.Server-3",
            "aws_key_pair.albkey",
            "aws_lb_target_group.alb-tg-3",
            "aws_security_group.alb-sg",
            "aws_subnet.alb-sub3",
            "aws_vpc.vpc-alb",
            "data.aws_ami.demo_ser"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:975266691648:targetgroup/alb-tg-3/c10e235a4eec7bbe-2023082006152322180000000b",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:975266691648:targetgroup/alb-tg-3/c10e235a4eec7bbe",
            "target_id": "i-090a03b73e65e74aa"
          },
          "dependencies": [
            "aws_instance.Server-3",
            "aws_key_pair.albkey",
            "aws_lb_target_group.alb-tg-3",
            "aws_security_group.alb-sg",
            "aws_subnet.alb-sub3",
            "aws_vpc.vpc-alb",
            "data.aws_ami.demo_ser"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "alb-nic-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975266691648:network-interface/eni-0fe69e014172a3715",
            "id": "eni-0fe69e014172a3715",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:d6:04:89:51:57",
            "owner_id": "975266691648",
            "private_dns_name": "ip-20-15-10-50.ec2.internal",
            "private_ip": "20.15.10.50",
            "private_ip_list": [
              "20.15.10.50"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "20.15.10.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-04e7cd0e7db0da7be"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-042b7d226d07d5e1a"
          },
          "dependencies": [
            "aws_security_group.alb-sg",
            "aws_subnet.alb-sub1",
            "aws_vpc.vpc-alb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "alb-nic-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975266691648:network-interface/eni-0c77cc195c3bc6838",
            "id": "eni-0c77cc195c3bc6838",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "12:28:bd:2b:7b:13",
            "owner_id": "975266691648",
            "private_dns_name": "ip-20-15-11-50.ec2.internal",
            "private_ip": "20.15.11.50",
            "private_ip_list": [
              "20.15.11.50"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "20.15.11.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-04e7cd0e7db0da7be"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-027ffa4ee6c2f3a26"
          },
          "dependencies": [
            "aws_security_group.alb-sg",
            "aws_subnet.alb-sub2",
            "aws_vpc.vpc-alb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "alb-nic-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975266691648:network-interface/eni-0e152d1b6685ae34c",
            "id": "eni-0e152d1b6685ae34c",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "0a:65:16:ee:eb:db",
            "owner_id": "975266691648",
            "private_dns_name": "ip-20-15-12-50.ec2.internal",
            "private_ip": "20.15.12.50",
            "private_ip_list": [
              "20.15.12.50"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "20.15.12.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-04e7cd0e7db0da7be"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06296508062d746de"
          },
          "dependencies": [
            "aws_security_group.alb-sg",
            "aws_subnet.alb-sub3",
            "aws_vpc.vpc-alb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ALB-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975266691648:route-table/rtb-038fcec4b4ef8ef8a",
            "id": "rtb-038fcec4b4ef8ef8a",
            "owner_id": "975266691648",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-073226cd1c49cf0e9",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ALB-RT"
            },
            "tags_all": {
              "Name": "ALB-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0926c91ad3c68425b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.vpc-alb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "RT-A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c03e09e566baab74",
            "route_table_id": "rtb-038fcec4b4ef8ef8a",
            "subnet_id": "subnet-042b7d226d07d5e1a"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.ALB-RT",
            "aws_subnet.alb-sub1",
            "aws_vpc.vpc-alb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "RT-B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ba99d27ff9b59dff",
            "route_table_id": "rtb-038fcec4b4ef8ef8a",
            "subnet_id": "subnet-027ffa4ee6c2f3a26"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.ALB-RT",
            "aws_subnet.alb-sub2",
            "aws_vpc.vpc-alb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "RT-C",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-089354c0610260dcb",
            "route_table_id": "rtb-038fcec4b4ef8ef8a",
            "subnet_id": "subnet-06296508062d746de"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.ALB-RT",
            "aws_subnet.alb-sub3",
            "aws_vpc.vpc-alb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975266691648:security-group/sg-04e7cd0e7db0da7be",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04e7cd0e7db0da7be",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow_tls",
            "name_prefix": "",
            "owner_id": "975266691648",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb-sg"
            },
            "tags_all": {
              "Name": "alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0926c91ad3c68425b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc-alb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "alb-sub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975266691648:subnet/subnet-042b7d226d07d5e1a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "20.15.10.0/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-042b7d226d07d5e1a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "975266691648",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet-E1"
            },
            "tags_all": {
              "Name": "Subnet-E1"
            },
            "vpc_id": "vpc-0926c91ad3c68425b"
          },
          "dependencies": [
            "aws_vpc.vpc-alb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "alb-sub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975266691648:subnet/subnet-027ffa4ee6c2f3a26",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "20.15.11.0/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-027ffa4ee6c2f3a26",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "975266691648",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet-E2"
            },
            "tags_all": {
              "Name": "Subnet-E2"
            },
            "vpc_id": "vpc-0926c91ad3c68425b"
          },
          "dependencies": [
            "aws_vpc.vpc-alb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "alb-sub3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975266691648:subnet/subnet-06296508062d746de",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "20.15.12.0/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06296508062d746de",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "975266691648",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet-E3"
            },
            "tags_all": {
              "Name": "Subnet-E3"
            },
            "vpc_id": "vpc-0926c91ad3c68425b"
          },
          "dependencies": [
            "aws_vpc.vpc-alb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975266691648:vpc/vpc-0926c91ad3c68425b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "20.15.0.0/16",
            "default_network_acl_id": "acl-0217eb3e1082b42df",
            "default_route_table_id": "rtb-02151c40c8791dc27",
            "default_security_group_id": "sg-0ff44640957b8c3c3",
            "dhcp_options_id": "dopt-00b696a765a7e9c3c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0926c91ad3c68425b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02151c40c8791dc27",
            "owner_id": "975266691648",
            "tags": {
              "Name": "VPC-Demo"
            },
            "tags_all": {
              "Name": "VPC-Demo"
            }
          }
        }
      ]
    }
  ]
}